--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
@@ -39,6 +40,7 @@
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
     "motion": "^12.19.1",
+    "negotiator": "^1.0.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "nextra": "^4.2.17",
@@ -64,6 +66,7 @@
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/negotiator": "^0.6.4",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
